# spelling

./: .coveragerc  .git_archival.txt  .gitignore  .hgignore  .hgtags  .mergify.yml  .readthedocs.yml  .travis.yml  AUTHORS  MANIFEST.in  Makefile  README  announce.rst  make-ext.py  nosetest.cfg  pyproject.toml  reno.yaml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  show-changelog.sh  tox.ini
.github/workflows/: check.yml  history-update.yaml  integration.yaml  python-publish.yaml  test.yml
.virtualenvwrapper/: postactivate  predeactivate
_template/: setup.py
aafig/: CHANGES  LICENSE  README  README.MAINTAINER  setup.py
aafig/doc/: conf.py  index.rst
aafig/sphinxcontrib/: aafig.py
actdiag/: README  setup.py
actdiag/sphinxcontrib/: actdiag.py
adadomain/: setup.py
adadomain/sphinxcontrib/: adadomain.py
ansi/: CHANGES.rst  MANIFEST.in  README  requirements.txt  setup.py  test_ansi.py  tox.ini
ansi/doc/: Makefile  conf.py  index.rst  requirements.txt
ansi/sphinxcontrib/: ansi.py
autorun/: setup.py
autorun/doc/: Makefile  conf.py  index.rst
autorun/sphinxcontrib/: autorun.py
bitbucket/: README  setup.py
bitbucket/sphinxcontrib/: bitbucket.py
blockdiag/: README  setup.py
blockdiag/sphinxcontrib/: blockdiag.py
cheeseshop/: CHANGES  README  setup.py
cheeseshop/sphinxcontrib/: cheeseshop.py
clearquest/: .project  .pydevproject  AUTHORS  CHANGES  LICENSE  README  setup.py
coffeedomain/: README  README.rst  documenters.py  setup.py
context/: README  setup.py
context/sphinxcontrib/: context.py
docs/: requirements.txt
docs/source/: code.rst  conf.py  customize.rst  developers.rst  history.rst  index.rst  install.rst  run.rst  spelling_people.txt  spelling_wordlist.txt
doxylink/: CHANGES.rst  MANIFEST.in  README.rst  release_checklist.rst  setup.py  tox.ini
doxylink/doc/: api.rst  conf.py  index.rst
doxylink/sphinxcontrib/: doxylink.py  parsing.py
doxylink/test/: test_parser.py
email/: MANIFEST.in  README  setup.py
email/sphinxcontrib/: email.py
epydoc/: CHANGES.rst  MANIFEST.in  README  setup.py  test_epydoc.py  tox.ini
epydoc/doc/: Makefile  conf.py  index.rst
epydoc/sphinxcontrib/: epydoc.py
erlangdomain/: CHANGES  README  setup.py
erlangdomain/doc/: conf.py  index.rst  reference.rst
erlangdomain/sphinxcontrib/: erlangdomain.py
erlangdomain/test/: Makefile  conf.py  test_doc.rst
exceltable/: CHANGES  README  setup.cfg  setup.py  tox.ini
exceltable/doc/: changelog.rst  conf.py  devel.rst  exceltable.rst  ext.rst  faq.rst  global.rst  glossary.rst  index.rst  rusty.json
exceltable/sphinxcontrib/: exceltable.py
exceltable/test/: test_exceltable.py
feed/: README  TODO.txt  setup.py
feed/tests/: assert_operators.py  run.py  test_build.py  test_feed.py  util.py
gnuplot/: README  setup.py
gnuplot/doc/: conf.py
gnuplot/sphinxcontrib/: gnuplot.py
googlechart/: README  setup.cfg  setup.py
googlechart/docs/: conf.py
httpdomain/: README  setup.py
httpdomain/doc/: Makefile  autoflask_sampleapp.py  conf.py  index.rst  make.bat
httpdomain/sphinxcontrib/: .httpdomain.py.swp  httpdomain.py
httpdomain/test/: Makefile  autoflask_alternative_lang.py  autoflask_sampleapp.py  conf.py  index.rst  make.bat
hyphenator/: CHANGES.rst  README  setup.py
hyphenator/sphinxcontrib/: hyphenator.py
integration_tests/: build_django.py
issuetracker/: CHANGES.rst  CREDITS  LICENSE  MANIFEST.in  README  requirements.txt  setup.py  test_issuetracker.py  tox.ini
issuetracker/doc/: Makefile  changes.rst  conf.py  index.rst  requirements.txt
issuetracker/sphinxcontrib/: issuetracker.py
issuetracker/tests/: conf.py  conftest.py  requirements.txt  test_bitbucket.py  test_builtin_resolvers.py  test_builtin_trackers.py  test_debian.py  test_github.py  test_google_code.py  test_launchpad.py  test_lookup.py  test_references.py  test_resolval.py  test_resolve.py  test_resolver.py  test_role.py  test_setup.py  test_stylesheet.py  test_tracker_config.py  test_transformer.py
lilypond/: README  setup.py
lilypond/sphinxcontrib/: lilypond.py
mscgen/: CHANGES  README  README.MAINTAINER  setup.py
mscgen/doc/: Makefile  conf.py
mscgen/sphinxcontrib/: mscgen.py
nicovideo/: README  setup.py
nicovideo/sphinxcontrib/: nicovideo.py
nwdiag/: AUTHORS  README  setup.py
nwdiag/sphinxcontrib/: nwdiag.py  rackdiag.py
omegat/: CHANGES  README  setup.py
omegat/doc/: Makefile  conf.py  index.rst  make.bat
omegat/sphinxcontrib_omegat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
osaka/: CHANGES  README  setup.py
osaka/doc/: Makefile  conf.py  index.rst  make.bat  python_tutorial.rst  python_tutorial.rst~  sample.rst
osaka/sphinxcontrib/: osaka.py
paverutils/: LICENSE  README  setup.py
paverutils/sphinxcontrib/: paverutils.py
phpdomain/: CHANGES  MANIFEST.in  README  setup.cfg  setup.py
phpdomain/doc/: conf.py  index.rst  reference.rst
phpdomain/sphinxcontrib/: phpdomain.py
phpdomain/test/: conf.py  index.rst  test_doc.rst  test_doc2.rst
programoutput/: CHANGES.rst  MANIFEST.in  README  setup.py  test_programoutput.py  tox.ini
programoutput/doc/: Makefile  conf.py  index.rst
programoutput/sphinxcontrib/: programoutput.py
pyqt4/: CHANGES.rst  MANIFEST.in  README  setup.py  test_pyqt4.py  tox.ini
rawfiles/: AUTHORS  MANIFEST.in  README.rst  setup.py
requirements/: AUTHORS  MANIFEST.in  setup.py
rubydomain/: CHANGES  README  makeenv.sh  setup.py
sadisplay/: MANIFEST.in  README  setup.py
sdedit/: CHANGES  README  setup.py
seqdiag/: MANIFEST.in  README  setup.py
spelling/: Makefile  README  announce.rst  setup.py
sphinxcontrib/: .travis.yml  __init__.py  spelling.py
sqltable/: LICENSE  Makefile  README  announce.rst  setup.py
sword/: README  setup.py
test/: test_builder.py  test_checker.py
tests/: helpers.py  test_builder.py  test_checker.py  test_filter.py
tools/: history-update.sh  travis.sh
traclinks/: LICENSE  README  setup.py
whoosh/: README  setup.py
whooshindex/: LICENSE  README  setup.py
youtube/: README
zopeext/: setup.py
(+136 files in other folders)
