[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "sphinxcontrib-spelling"
readme = "README.rst"
authors = [{ name = "Doug Hellmann", email = "doug@doughellmann.com" }]
description = "Sphinx spelling extension"
dynamic = ["version"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Documentation",
    "Topic :: Utilities",
]

requires-python = ">=3.10"

dependencies = ["PyEnchant>=3.1.1", "Sphinx>=3.0.0", "requests>=2.32.3"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "coverage!=4.4,>=4.0"]

[project.entry-points."sphinx.builders"]
spelling = "sphinxcontrib.spelling"

[project.urls]
homepage = "https://sphinxcontrib-spelling.readthedocs.io/en/latest/"
repository = "https://github.com/sphinx-contrib/spelling"

[tool.hatch.version]
source = "vcs"
path = "sphinxcontrib/spelling/version.py"

[tool.hatch.build.targets.sdist]
exclude = [".github", "cover", ".mergify.yml", ".gitignore"]
[tool.hatch.build.targets.wheel]
only-include = ["sphinxcontrib"]

[tool.hatch.envs.docs]
dependencies = ["sphinx"]
[tool.hatch.envs.docs.env]
ENABLE_SPELLING = "1"
[tool.hatch.envs.docs.scripts]
build = [
    "sphinx-build -W -j auto -b html -d docs/build/doctrees docs/source docs/build/html",
    "sphinx-build -W -j auto -b linkcheck -d docs/build/doctrees docs/source docs/build/linkcheck",
    "sphinx-build -W -j auto -b spelling -d docs/build/doctrees docs/source docs/build/spelling",
]
check = "sphinx-build -W -j auto -b spelling -d docs/build/doctrees docs/source docs/build/spelling"

[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "pytest-cov",
    "coverage!=4.4,>=4.0",
    "ruff",
    "twine",
    "check-python-versions",
]
[tool.hatch.envs.test.scripts]
test = "python -m pytest --cov=sphinxcontrib.spelling --cov-report term-missing --log-level DEBUG tests"
lint = "ruff check sphinxcontrib integration_tests tests"
pkglint = [
    "hatch build",
    "twine check dist/*.tar.gz dist/*.whl",
    "check-python-versions --only pyproject.toml,.github/workflows/test.yml",
]

[tool.hatch.envs.integration]
dependencies = ["tox"]
[tool.hatch.envs.integration.scripts]
django = "./integration_tests/build_django.py"
