[metadata]
name = sphinxcontrib-spelling
description-file = README
author = Doug Hellmann
author-email = doug@doughellmann.com
summary = Sphinx spelling extension
home-page = https://github.com/sphinx-contrib/spelling
python_requires = >=3.6
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Web Environment
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Documentation
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    sphinxcontrib
namespace_packages =
    sphinxcontrib

[extras]
test =
    pytest
    pytest-cov
    coverage!=4.4,>=4.0

[entry_points]
sphinx.builders =
  spelling = sphinxcontrib.spelling

[egg_info]
#tag_build = dev
#tag_date = true

[aliases]
release = egg_info -RDb ''
