[metadata]
name = sphinxcontrib-spelling
description_file = README
author = Doug Hellmann
author_email = doug@doughellmann.com
summary = Sphinx spelling extension
home_page = https://github.com/sphinx-contrib/spelling
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Web Environment
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Documentation
    Topic :: Utilities

[options]
python_requires = >=3.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    sphinxcontrib
namespace_packages =
    sphinxcontrib

[extras]
test =
    pytest
    pytest-cov
    coverage!=4.4,>=4.0

[entry_points]
sphinx.builders =
  spelling = sphinxcontrib.spelling

[egg_info]
#tag_build = dev
#tag_date = true

[aliases]
release = egg_info -RDb ''
